--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
             <img class="logoImg" src="./imgs/logo.png" alt="" />
           </div>
           <ul>
-            <li><a href="">Today special offers</a></li>
-            <li><a href="">Why FoodHut</a></li>
-            <li><a href="">Our Menu</a></li>
-            <li><a href="">Our Popular food</a></li>
+            <li><a href="#today">Today special offers</a></li>
+            <li><a href="#about">Why FoodHut</a></li>
+            <li><a href="#ourMenu">Our Menu</a></li>
+            <li><a href="#contact">Our Popular food</a></li>
           </ul>
           <div class="btns">
             <button class="darkBtn">
@@ -42,7 +42,7 @@
             </button>
             <button>Downlode App</button>
             <div class="hamburger">
-              <i class=" fa-solid fa-bars"></i>
+              <i class="fa-solid fa-bars"></i>
             </div>
           </div>
         </div>
@@ -83,7 +83,7 @@
       </div>
     </header>
     <main>
-      <section class="today-section">
+      <section class="today-section" id="today">
         <div class="container">
           <div class="info">
             <h2>Today <span>special</span> offers</h2>
@@ -154,7 +154,7 @@
         </div>
         <img class="leaf" src="./imgs/leaf.png" alt="" />
       </section>
-      <section class="about-section">
+      <section class="about-section" id="about">
         <div class="container">
           <div class="imgs">
             <img src="./imgs/aboutImg.png" alt="" />
@@ -180,7 +180,7 @@
           </div>
         </div>
       </section>
-      <section class="menu-section">
+      <section class="menu-section" id="ourMenu">
         <div class="container">
           <div class="info">
             <h2>
@@ -314,7 +314,7 @@
           </div>
         </div>
       </section>
-      <section class="contact-section">
+      <section class="contact-section" id="contact">
         <div class="container">
           <div class="info">
             <h2>
